.helm/gallowhead/test/frontend/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gallowhead-frontend
  labels:
  annotations:
spec:
  ingressClassName: "traefik"
  tls:
    - secretName: gallowhead-test-cert
      hosts:
        - test.gallowhead.com
        - www.test.gallowhead.com
    - secretName: gallowhead-api-test-cert
      hosts:
        - test.api.gallowhead.com
  rules:
    hosts:
        - host: test.gallowhead.com
          http:
            paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: gallowhead-frontend
                  port:
                    number: 80
            - path: /api
              pathType: Prefix
              backend:
                service:
                  name: gallowhead-backend
                  port:
                    number: 3000
        - host: test.api.gallowhead.com
          http:
            paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: gallowhead-backend
                  port:
                    number: 3000
